<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_menu_web"
            android:title="@string/menu_web" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />


        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_video" />

       <!-- <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_browser"
            android:title="@string/menu_browser" />-->

        <item
            android:id="@+id/nav_newsupdate"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_newsupdate"/>

        <item
            android:id="@+id/nav_newsdetail"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_newsdetails"
            android:visible="false"/>

    </group>



<item android:title="Other Menus">
<menu>
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about"/>

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>

</item>
</menu>
