<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bedsongultom.wisatariau.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_web"
        android:name="com.bedsongultom.wisatariau.ui.web.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />


    <fragment
        android:id="@+id/nav_map"
        android:name="com.bedsongultom.wisatariau.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.bedsongultom.wisatariau.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.bedsongultom.wisatariau.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="com.bedsongultom.wisatariau.ui.browser.BrowserFragment"
        android:label="@string/menu_browser"
        tools:layout="@layout/fragment_browser" />


    <fragment
        android:id="@+id/nav_newsupdate"
        android:name="com.bedsongultom.wisatariau.ui.newsupdate.NewsUpdateFragment"
        android:label="@string/menu_newsupdate"
        tools:layout="@layout/fragment_newsupdate" />

    <fragment
        android:id="@+id/nav_newsdetail"
        android:name="com.bedsongultom.wisatariau.ui.newsdetails.NewsDetailFragment"
        android:label="@string/menu_newsdetails"
        tools:layout="@layout/fragment_newsdetail" />



    <fragment
        android:id="@+id/nav_about"
        android:name="com.bedsongultom.wisatariau.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.bedsongultom.wisatariau.ui.exit.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />


</navigation>